--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,6 @@
             </div>
         <% }); %>
     </div>
-    <h6>Made by Aditya Chaudhary and Tanish Desai</h6>
+    <h6>Made with ❤️ by Aditya Chaudhary and Tanish Desai</h6>
 </body>
 </html>
