--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -8,28 +8,29 @@ body {
 
 .container {
   width: 80%;
-  margin: 20px auto;
+  margin: auto;
   overflow: hidden;
   background-color: #fff;
-  padding: 20px;
+  padding: 5px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
   text-align: center;
-  margin-top: 0;
+  margin-top: 10px;
   color: #4a90e2;
 }
 
 .problems {
-  margin: 20px 0;
+  margin: auto;
 }
 
 h2 {
   color: #4a90e2;
   border-bottom: 2px solid #4a90e2;
   padding-bottom: 5px;
+  padding: 8px;
 }
 
 ul {
@@ -40,7 +41,7 @@ ul {
 li {
   background: #e3f2fd;
   margin: 10px 0;
-  padding: 15px;
+  padding: 8px;
   border-radius: 8px;
   display: flex;
   justify-content: space-between;
@@ -60,7 +61,11 @@ label {
   flex-grow: 1;
   cursor: pointer;
 }
-
+h6{
+  color: #4a90e2;
+  width: 100%;
+  text-align: center;
+}
 a {
   text-decoration: none;
   color: #4a90e2;
@@ -76,80 +81,24 @@ a:hover {
 }
 
 /* Responsive Design */
-@media (max-width: 1024px) {
-  .container {
-    width: 85%;
-  }
-}
-
 @media (max-width: 768px) {
   .container {
-    width: 90%;
+      width: 90%;
+      padding: 2px;
   }
 
   li {
-    flex-direction: column;
-    align-items: flex-start;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      margin: 10px;
   }
 
   a {
-    margin-top: 10px;
-    padding: 8px;
+      margin-top: auto;
+      padding: 4px;
   }
-}
-
-@media (max-width: 576px) {
-  body {
-    font-size: 14px;
-  }
-
-  .container {
-    width: 95%;
-    padding: 15px;
-  }
-
-  li {
-    padding: 10px;
-  }
-
-  h1 {
-    font-size: 24px;
-  }
-
-  h2 {
-    font-size: 20px;
-  }
-
-  a {
-    padding: 5px 8px;
-    font-size: 14px;
-  }
-}
-
-@media (max-width: 375px) {
-  body {
-    font-size: 12px;
-  }
-
-  .container {
-    width: 100%;
-    padding: 10px;
-  }
-
-  li {
-    padding: 8px;
-  }
-
-  h1 {
-    font-size: 20px;
-  }
-
-  h2 {
-    font-size: 18px;
-  }
-
-  a {
-    padding: 4px 6px;
-    font-size: 12px;
+  h1{
+    font-size: auto;
   }
 }
